Fixes from initial testing
First successful run without runtime errors thrown

--- a/nodemda-js-mongoose/plugins/templates/backend/models/{_package_}/{Entity}.js.hbs
+++ b/nodemda-js-mongoose/plugins/templates/backend/models/{_package_}/{Entity}.js.hbs
@@ -1,4 +1,4 @@
-##output overwrite {{@root.output}}/backend/models/{{class.packageDirPath}}{{lowercase class.name}}.js
+##output overwrite
 // This file was generated with NodeMDA. It will be overwritten if generated again.
 // Do not modify this file.
 //
