--- a/nodemda-js-react-mantine/plugins/templates/frontend/default.conf.template.hbs
+++ b/nodemda-js-react-mantine/plugins/templates/frontend/default.conf.template.hbs
@@ -1,4 +1,4 @@
-##output preserve {{@root.output}}/frontend/default.conf.template
+##output preserve
 server {
     listen 80;
     server_name {{kebabCase model.name}}-server;
