--- a/nodemda-js-react-mantine/plugins/templates/frontend/src/components/{_package_}/{Entity}Form.js.hbs
+++ b/nodemda-js-react-mantine/plugins/templates/frontend/src/components/{_package_}/{Entity}Form.js.hbs
@@ -1,4 +1,4 @@
-##output {{#if class.genCRUD}}overwrite{{else}}ignore{{/if}} {{@root.output}}/frontend/src/components/{{class.packageDirPath}}{{class.name}}Form.js
+##output {{#if class.genCRUD}}overwrite{{else}}ignore{{/if}}
 {{#* inline "inputTag" ~}}
 {{#ifBoth attrib.visibleToForm attrib.mantineInputTag}}
 {{indent}}<{{attrib.mantineInputTag}}
