--- a/nodemda-js-react-mantine/plugins/templates/frontend/src/components/{_package_}/{Entity}Table.js.hbs
+++ b/nodemda-js-react-mantine/plugins/templates/frontend/src/components/{_package_}/{Entity}Table.js.hbs
@@ -1,4 +1,4 @@
-##output {{#if class.genCRUD}}overwrite{{else}}ignore{{/if}} {{@root.output}}/frontend/src/components/{{class.packageDirPath}}{{class.name}}Table.js
+##output {{#if class.genCRUD}}overwrite{{else}}ignore{{/if}}
 // This file was generated with NodeMDA. It will be overwritten if generated again.
 // Do not modify this file.
 //
