--- a/nodemda-js-rest-koa/plugins/templates/backend/routes/{_package_}/{Entity}-REST.js.hbs
+++ b/nodemda-js-rest-koa/plugins/templates/backend/routes/{_package_}/{Entity}-REST.js.hbs
@@ -1,4 +1,4 @@
-##output {{#if class.genREST}}overwrite{{else}}ignore{{/if}} {{@root.output}}/backend/routes/{{class.packageDirPath}}{{lowercase class.name}}.js
+##output {{#if class.genREST}}overwrite{{else}}ignore{{/if}}
 // This file was generated with NodeMDA. It will be overwritten if generated again.
 // Do not modify this file.
 //
